--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+app-root {
+  display: block;
+}
+
+html,
+body, app-root {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.page {
+  height: 100%;
+
+  display: block;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.w-75 {
+  width: 75%;
+}
+
+.w-100 {
+  width: 100%;
+}
