--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,30 @@ body {
 .w-100 {
   width: 100%;
 }
+
+.position-relative {
+  position: relative;
+}
+
+.bg-secondary {
+  background: var(--mat-sys-secondary-container);
+}
+
+.half-transparent {
+  opacity: 0.5;
+}
+
+.full-size {
+  width: 100%;
+  height: 100%;
+}
+
+.d-block {
+  display: block;
+}
+
+.centered {
+  position: absolute !important;
+  inset: 0;
+  margin: auto;
+}
