implement user sign in

--- a/src/app/pages/auth/auth-page.component.html
+++ b/src/app/pages/auth/auth-page.component.html
@@ -3,6 +3,8 @@
     <ng-container [ngTemplateOutlet]="form" [ngTemplateOutletContext]="{
         title: 'Sign In',
         form: signInForm,
+        onSubmit: signIn,
+        isInProgress: signInInProgress()
       }" />
   </mat-grid-tile>
 
