--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@use "./styles/displays.scss";
+@use "./styles/paint.scss";
+@use "./styles/positions.scss";
+@use "./styles/sizes.scss";
 
 app-root {
   display: block;
 }
 
 html,
-body, app-root {
+body,
+app-root {
   height: 100%;
 }
 
@@ -14,51 +18,8 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.h-100 {
-  height: 100%;
-}
-
 .page {
   height: 100%;
 
   display: block;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.w-75 {
-  width: 75%;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.position-relative {
-  position: relative;
-}
-
-.bg-secondary {
-  background: var(--mat-sys-secondary-container);
-}
-
-.half-transparent {
-  opacity: 0.5;
-}
-
-.full-size {
-  width: 100%;
-  height: 100%;
-}
-
-.d-block {
-  display: block;
-}
-
-.centered {
-  position: absolute !important;
-  inset: 0;
-  margin: auto;
 }
